---------------------------------
Change Log
---------------------------------
Version 1.5.1
-----------
Added a sensor view 
Added devices that are sensors to the sensor view when querying an ISY



Version 1.5
-----------
- Scene buttons now give feedback when pressed.
- Switches for http/https and remote/local network
- Changed name of default folder
- ISY portal is the default remote connection
- Added About page with version 
- Fixed issue where button tracking wasn't working for some ISY devices.
- Changed the add icon to green.  Isn't it pretty?
- You can now add new folders or existing folders to a view.
- When adding devices you can now click on them to add/remove them from the same page.
- When clicking to add devices it will no longer add duplicates.
- Now when you choose a device you can rename it you don't have to go to edit mode.
- There is a new page for Programs that allows you to run them, disable them or see when they were last run.